Add images Add intro component

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,520 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*Primary
+   #C2D0E1
+   #95ADCC
+   #597FAF
+   #415D80
+   #293A50
+Neutral
+   #8d93A2
+   #676F84
+   #2F3A56
+   #232B3F
+   #161B28
+Greys
+   #90949A
+   #71757D
+   #525761
+   #3C4047
+   #444850
+Accents
+   Warning
+      #E5BE7E
+      #D99E3E
+      #d18914
+      #99640f
+      #ac7111
+  Positive
+      #819FC5      
+      #6187B7
+      #527cb0
+      #446691
+      #3C5B81
+   Black
+      #616059
+      #4E4C44
+      #27251b
+      #201F17
+      #1D1B14
+Otros
+   #27251b
+   #d5dadf
+   #90aac3
+   #525761
+   #a0c4de
+   #7ca6dc */
+
+/* 
+
+    font-family: 'Source Sans Pro', sans-serif;
+
+    font-family: 'Source Code Pro', monospace;
+
+*/
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Custom properties */
+
+:root {
+    --ff-primary:'Source Sans Pro', sans-serif;
+    --ff-secondary: 'Source Code Pro', monospace;
+
+    --fw-reg: 300;
+    --fw-bold: 900;
+
+    --clr-primary1:#C2D0E1;
+    --clr-primary2:#95ADCC;
+    --clr-primary3:#597FAF;
+    --clr-primary4:#415D80;
+    --clr-primary5:#293A50;
+
+    --clr-neutral1:#8d93A2;
+    --clr-neutral2:#676F84;
+    --clr-neutral3:#2F3A56;
+    --clr-neutral4:#232B3F;
+    --clr-neutral5:#161B28;
+
+    --clr-grey1:#90949A;
+    --clr-grey2:#71757D;
+    --clr-grey3:#525761;
+    --clr-grey4:#3C4047;
+    --clr-grey5:#444850;
+
+    --clr-warning1:#E5BE7E;
+    --clr-warning2:#D99E3E;
+    --clr-warning3:#d18914;
+    --clr-warning4:#99640f;
+    --clr-warning5:#ac7111;
+
+    --clr-positive1:#819FC5;
+    --clr-positive2:#6187B7;
+    --clr-positive3:#527cb0;
+    --clr-positive4:#446691;
+    --clr-positive5:#3C5B81;
+
+    --clr-black1:#616059;
+    --clr-black2:#4E4C44;
+    --clr-black3:#27251b;
+    --clr-black4:#201F17;
+    --clr-black5:#1D1B14;
+
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
+
+    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+          0.125em 0.125em 0.25em rgba(0,0,0.15);
+}
+
+@media (min-width: 800px) {
+    :root {
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+    }
+}
+
+/* General Styles */
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    background: var(--clr-primary1);
+    color: var(--clr-primary5);
+    margin: 0;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.5;
+}
+
+section {
+    padding: 5em 2em;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+}
+
+strong {
+    font-weight: var(--fw-bold);
+}
+
+:focus {
+    outline: 3px solid var(--clr-primary2);
+    outline-offset: 3px;
+}
+
+.btn {
+    display: inline-block;
+    padding: .5em 1.5em;
+    background: var(--clr-neutral3);
+    color: var(--clr-primary1);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
+/* Typography */
+
+h1,
+h2,
+h3{
+    line-height: 1.1;
+    margin: 0;
+}
+
+h1 {font-size: var(--fs-h1)}
+h2 {font-size: var(--fs-h2)}
+h3 {font-size: var(--fs-h3)}
+
+.section__title {
+    margin-bottom: 0.25em;
+}
+
+.section__title--intro {
+    font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong {
+    display:block;
+}
+
+.section__subtitle {
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--clr-neutral1);
+    font-family: var(--ff-secondary);
+    margin-bottom: 1em;
+    padding: .25em 1em;
+}
+
+/* header */
+
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+.logo {
+    max-width: 100px;    
+}
+
+.nav {
+    position: fixed;
+    background: var(--clr-neutral4);
+    color: var(--clr-neutral1);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5,0,5,1);
+}
+
+.nav__list {
+    list-style: none;
+    display:flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__link {
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h3)
+}
+
+.nav__link:hover {
+    color: var(--clr-primary1);
+}
+
+.nav-toggle {
+    padding: .25em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top:1em;
+    z-index: 10000;
+}
+
+.nav-open .nav {
+    transform: translateX(0);
+}
+
+.nav-open .nav-toogle {
+    position: fixed;
+}
+
+.nav-open .hamburger {
+    transform: rotate(.625turn)
+}
+
+.nav-open .hamburger::before {
+    transform: rotate(90deg) translateX(-6px);
+}
+.nav-open .hamburger::after {
+    opacity:0;
+}
+
+.hamburger {
+    display: block;
+    position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--clr-primary5);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+    background: var(--clr-primary4);
+}
+
+.hamburger::before,
+.hamburger::after {
+    content:'';
+    position: absolute;
+    left:0;
+    right:0;
+}
+
+.hamburger::before { top: 6px}
+.hamburger::after {bottom: 6px}
+/* Intro section */
+
+.intro {
+    position: relative;
+}
+
+.intro__img {
+    border-radius: 90%;
+    box-shadow: var(--bs);
+}
+
+.section__subtitle--intro {
+    display: inline-block;
+}
+
+@media (min-width: 600px) {
+    .intro {
+        display: grid;
+        width: min-content;
+        margin: 0 auto;
+        grid-column-gap: 1em;
+        grid-template-areas:
+            "img title"
+            "img subtitle";
+        grid-template-columns: min-content max-content; 
+    }
+
+    .intro__img {
+        grid-area: img;
+        min-width: 250px;
+        position: relative;
+        z-index:2;
+    }
+    .section__subtitle--intro {
+        align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -1.5em;
+        width: calc(100%+1.5em);
+    }
+}
+
+/* My services */
+
+.my-services {
+    background-color: var(--clr-neutral4);
+    background-image: url(/images/services-bg.jpg);
+    background-size: cover;
+    background-blend-mode: multiply;
+    color: var(--clr-primary1);
+    text-align: center;
+}
+
+.section__title--services {
+    color: var(--clr-neutral1);
+    position: relative;
+}
+
+.section__title--services::after {
+    content: '';
+    display: block;
+    width: 3em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background: currentColor;
+    opacity: 0.25;
+
+}
+
+.services {
+    margin-bottom: 4em;
+}
+
+.service {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+@media (min-width: 800px) {
+    .services {
+        display: flex;
+        max-width: 1000px;
+        margin: 0 auto;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .service + .service {
+        margin-left: 2em;
+    }
+}
+
+.about-me {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+@media (min-width: 600px) {
+    .about-me {
+        display: grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas:
+            "title img"
+            "subtitle img"
+            "text img";
+        grid-column-gap: 2em; 
+    }
+
+    .section__subtitle--about {
+        grid-column: 1 /-1;
+        grid-row: 2;
+        position: relative;
+        left: -1em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 4em);
+    }
+    .section__title--about {
+        grid-area: title;
+    }
+
+    .about-me__img {
+        grid-area: img;
+        position: relative;
+        z-index: 2;
+    }
+}
+
+/* My work */
+
+.my-work {
+    background-color: var(--clr-neutral4);
+    color: var(--clr-primary1);
+    text-align: center;
+}
+
+.section__subtitle--work {
+    color: var(--clr-primary2);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+}
+
+.portfolio {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+}
+
+.portfolio__item {
+    background: var(--clr-neutral3);
+    overflow: hidden;
+
+}
+
+.portfolio__img {
+    transition: transform 750ms cubic-bezier(.5, 0, .5, 1),
+                opacity 250ms linear;
+}
+
+.portfolio__item:focus {
+    position: relative;
+    z-index: 2;
+}
+
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+    transform: scale(1.2);
+    opacity: .5;
+}
+
+/* footer */
+
+footer {
+    background-color: var(--clr-neutral5);
+    color: var(--clr-neutral1);
+    text-align: center;
+    padding: 2.5em 0;
+}
+
+footer a {
+    color: inherit;
+    text-decoration: none;
+    font-size: var(--fs-h3);
+    font-weight: var(--fw-bold);
+}
+
+footer a:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.social-list {
+    list-style:none;
+    display:flex;
+    justify-content: center;
+    margin: 2em 0;
+    padding: 0;
+}
+
+.social-list__item {
+    margin: 0 .5em;    
+}
+
+.social-list__link {
+    padding: .5em;
 }
